--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpCZAF4yJyeI1nWR0AinE6",
+      "authorship_tag": "ABX9TyN8yA76WNv6nsF7dx7Dtk9F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -539,6 +539,29 @@
             "69 * 9 = 621\n",
             "69 * 10 = 690\n",
             "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sb3kg6TvH4lU",
+        "outputId": "69a0a07c-ffaa-4044-8e45-778d7ab4e2da"
+      },
+      "source": [
+        "print(\"this is python file\")"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "this is python file\n"
           ],
           "name": "stdout"
         }
