--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN8yA76WNv6nsF7dx7Dtk9F",
+      "authorship_tag": "ABX9TyMpM+D9cITxCrINmFupkIHo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -358,12 +358,36 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PIDYA_ke23vR"
+      },
+      "source": [
+        "WEEK4 Strings"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PHnZb4zc28XY"
+      },
+      "source": [
+        "a. Write a program to find the length of the string without using any library functions\r\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "sb3kg6TvH4lU"
       },
       "source": [
-        "print(\"this is python file\")"
+        "def len(string):\r\n",
+        "  length=0\r\n",
+        "  for i in string:\r\n",
+        "    length+=1\r\n",
+        "  print(length)\r\n",
+        "\r\n",
+        "len(\"GVPCE\")    "
       ],
       "execution_count": null,
       "outputs": []
