--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMpM+D9cITxCrINmFupkIHo",
+      "authorship_tag": "ABX9TyOOW90OK/Dlz5/CjlZzrri2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,6 +391,61 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AYEagast28aE"
+      },
+      "source": [
+        "b. Write a program to check if two strings are anagrams or not.\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "atr52KOp3D6v"
+      },
+      "source": [
+        "def anagram(s1,s2):\r\n",
+        "  s1=sorted(s1.lower())\r\n",
+        "  s2=sorted(s2.lower())\r\n",
+        "  return s1==s2\r\n",
+        "# anagram(\"piG\",\"g i p\")\r\n",
+        "anagram(\"pig\",\"gip\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9wB_-JirA8yu"
+      },
+      "source": [
+        "c. Write a program to check if the substring is present in a given string or not. (use regular\r\n",
+        "expressions)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZR5r_IJCA__f"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6mL5e8US4lgc"
+      },
+      "source": [
+        " "
+      ]
     }
   ]
 }
