--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4++oNR8CAf9BNae0ahtw9",
+      "authorship_tag": "ABX9TyMaElzo3R4/WCrRRjxjkesm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -748,6 +748,39 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SynF-VePpiQT",
+        "outputId": "f5b98d63-73e6-477b-bd5e-ac55f6c2c394"
+      },
+      "source": [
+        "l=[2,5,4,5,3,2,8]\n",
+        "print(\"maximum number is : \",max(l))\n",
+        "print(\"minimum number is : \",min(l))\n",
+        "print(\"added 333 to the given list : \",l.append(333))\n",
+        "print(\"deleted 333 from the given list : \",l.pop())\n",
+        "# pop will delete the last element added to the list\n",
+        "print(\"sorted list :  \",l.sort())"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "maximum number is :  8\n",
+            "minimum number is :  2\n",
+            "added 333 to the given list :  None\n",
+            "deleted 333 from the given list :  333\n",
+            "sorted list :   None\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "gWqZB_9dcU9B"
@@ -762,37 +795,25 @@
       "metadata": {
         "id": "mORKGRIHcCsp",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 295
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e1d0a6c3-7742-40f7-aacc-54bd11a59d28"
+        "outputId": "fef3711e-6e98-4321-d10c-338002a14db1"
       },
       "source": [
-        "# l=list(input())\n",
-        "# l=[x for int(x) in l if int(x)%2==0 ]\n",
-        "# print(l)\n",
-        "# # [2,5,4,5,3,2,8]"
+        "l=eval(input())\n",
+        "l=[x for x in l if int(x)%2==0 ]\n",
+        "print(l)\n",
+        "# [2,5,4,5,3,2,8]"
       ],
-      "execution_count": 31,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[2,5,4,5,3,2,8]\n"
+            "[2,5,4,5,3,2,8]\n",
+            "[2, 4, 2, 8]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-31-cd0741880b8e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-31-cd0741880b8e>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ml\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '['"
-          ]
         }
       ]
     }
