--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMaElzo3R4/WCrRRjxjkesm",
+      "authorship_tag": "ABX9TyNTcf5pO1Sf88ofAXeg58rk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -816,6 +816,616 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k-5h2B9CsdXq"
+      },
+      "source": [
+        "WEEK6 TUPLES"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UfknAjuvsqos"
+      },
+      "source": [
+        "a. Write a program to create tuples (name, age, address, college) for at least two \n",
+        "members and concatenate the tuples and print the concatenate tuples"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7wv8Mf0isjZU"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QfJYuUEDssEY"
+      },
+      "source": [
+        "b. Write a program to return the top 'n' most frequently occurring chars and their respectivecounts.\n",
+        "e.g. aaaaaabbbbcccc, 2 should return [(a 6) (b 4)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ba8A-0J8tqBJ"
+      },
+      "source": [
+        "\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MTwHHxomttcc"
+      },
+      "source": [
+        "WEEK7 SETS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LJJlJ3fHtvi2"
+      },
+      "source": [
+        "a. Write a program to count the number of vowels in a string (No control flow allowed).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zLtdtzlBt87u"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ey0s59oft9Sr"
+      },
+      "source": [
+        "b. Write a program that displays which letters are present in both strings.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GmWqu0L0uBZc"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qV6jIpStuCUN"
+      },
+      "source": [
+        "c. Write a program to sort given list of strings in the order of their vowel counts."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eVjp9FpIuFIS"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hNopHVX-uFlI"
+      },
+      "source": [
+        "WEEK8 DICTIONARIES\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HwLBueSTuL6L"
+      },
+      "source": [
+        "a. Write a program to generate a dictionary that contains numbers (between 1 and n ) \n",
+        "in the form of (x, x*x).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NrJK4NztuPmX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TkozOg0CuQSW"
+      },
+      "source": [
+        "b. Write a program to check if a given key exists in a dictionary or not.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GfHhV0O4uS9L"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RHeUXyHMuTa3"
+      },
+      "source": [
+        "c. Write a program to add a new key-value pair to an existing dictionary."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JlWyxShguWR1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mLYdA_LEuYby"
+      },
+      "source": [
+        "d. Write a program to sum all the items in a given dictionary"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hnc9WxYNuZbK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sBgRicGoujWl"
+      },
+      "source": [
+        "WEEK9 FILES\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XrTytGkRunBo"
+      },
+      "source": [
+        "a. Write a program to sort words in a file and put them in another file. The output file \n",
+        "should have only lower case words, so any upper case words from source must be \n",
+        "lowered. (Handle exceptions)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Sm124eeuumsL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VM86EnaFuqQa"
+      },
+      "source": [
+        "b. Write a program to find the most frequent words in a text.(read from a text file)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "l0Loe6OGusNL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8gOm8gnUutQ0"
+      },
+      "source": [
+        "WEEK 10 CLASSES"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "65OqPoSbu4ti"
+      },
+      "source": [
+        "a. Write a Python class named Person with attributes name, age, weight (kgs), height \n",
+        "(ft) and takes them through the constructor and exposes a method get_bmi_result() \n",
+        "which returns one of \"underweight\", \"healthy\", \"obese\"."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5jz_XPn2uzl8"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I887SHXLuz4b"
+      },
+      "source": [
+        "b. Write a Python class named Circle constructed by a radius and two methods which \n",
+        "will compute the area and the perimeter of a circle."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZEkZnX8Ru2g9"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Zr_CXS2mvDJC"
+      },
+      "source": [
+        "WEEK 11 ARRAYS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "15eLytrTvHhU"
+      },
+      "source": [
+        "a. Write a program to create, display, append, insert and reverse the order of the items in the array"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wyr7izF8vJm-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jdSkZl52vJ-Q"
+      },
+      "source": [
+        "b. Write a program to add, transpose and multiply two matrices.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bgEYn-5evNeJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "efjBD4B1vOqj"
+      },
+      "source": [
+        "WEEK12 GUI"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "TNLZ80E-vTPh"
+      },
+      "source": [
+        "Write a program to create a basic calculator using tkinter.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iRqaiu6SvWOF"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sVkb_92XvfFM"
+      },
+      "source": [
+        "ADDITIONAL PROGRAMS"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nLDseQNLvhyZ"
+      },
+      "source": [
+        "1. Write a program to check whether a given number has an even number of 1's in its \n",
+        "binary representation (No control flow allowed).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_aylnKz6vlVL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Nz0mx-FSvlh3"
+      },
+      "source": [
+        "2. Write a program to implement user defined map() function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JOePvSWQvlqh"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RA3TxDCVvlxj"
+      },
+      "source": [
+        "3. Write a program to return a list in which duplicates are removed and the items are \n",
+        "sorted from a given input list of strings."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FTeVH_sTvl6M"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ct9iui1YvmAs"
+      },
+      "source": [
+        "4. Write a program to implement left binary search"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7eIvTzzivmIv"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FWnVyccrvmP0"
+      },
+      "source": [
+        "5. Write a program to change days to hours, hours to minutes, and minutes to seconds \n",
+        "using currying of composition of function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zspZlmjbvmXX"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r3M1jnfivmem"
+      },
+      "source": [
+        "6. Write a program to generate an infinite number of even numbers (Use generator)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AMhy1ov3vmmY"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Fz9Y4pqDvmst"
+      },
+      "source": [
+        "7. Write a program to convert a given iterable into a list. (Using iterator)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qei-IzDGvmzt"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vKScLWsFwBeW"
+      },
+      "source": [
+        "8. Write a program that accepts a sequence of whitespace separated words as input and \n",
+        "printsthe words after removing all duplicate words and sorting themalphanumerically\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OXK-HZFBwDJK"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kj5OVxZ6wDV-"
+      },
+      "source": [
+        "9. Given a string and a number k, find the kth non-repeating character in the string. \n",
+        "Consider a large input string with lakhs of characters and a small character set. How \n",
+        "to find the character by only doing only one traversal of input string?\n",
+        "\n",
+        "e.g. input : str = hellopython k=3; output = y"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZzUMNpY0wDfJ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "07UG7ZIrwDnd"
+      },
+      "source": [
+        "10. To add 'ing' at the end of a given string (length should be at least 3). If the givenstring already ends with 'ing' then add 'ly' instead. If the string length of the \n",
+        "given string is less than 3, leave it unchanged.\n",
+        "e.g. input : 'abc' output : 'abcing' ; input : 'string' output : 'stringly'"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0miwyxjVwDvQ"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
