--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTcf5pO1Sf88ofAXeg58rk",
+      "authorship_tag": "ABX9TyOIv/rgagUEsD47e977UREk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,7 +79,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22497261-5a36-4767-9876-0cbe2024315b"
+        "outputId": "51b1ff22-fd8d-4d5e-90a1-816794d10f6f"
       },
       "source": [
         "look=int(input(\"enter 0 or 1 only  \"))\n",
@@ -90,7 +90,7 @@
         "else:\n",
         "  print(\"Wrong entry ! please enter o or 1 only\")    "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -203,7 +203,7 @@
         "    evenSum+=i\n",
         "print(evenSum)    "
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +244,7 @@
         "  checkIfPrime(i)\n",
         " "
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +294,7 @@
         "print(a)\n",
         "print(b)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -334,7 +334,7 @@
         "print(sum)\n",
         "print(sub)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -368,7 +368,7 @@
         "adder=lambda a,b :a+b\n",
         "adder(2,4)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +409,7 @@
         "default_args()\n",
         "default_args(\"gvp\",\"vizag\")"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -459,7 +459,7 @@
         "for i in range(1,5):\n",
         "  print(\"*\"*i)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,7 +502,7 @@
         "tables(15,NoOfTimes)\n",
         "tables(69,NoOfTimes)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -581,7 +581,7 @@
         "\n",
         "length(\"GVPCE\")    "
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,7 +618,7 @@
         "# anagram(\"piG\",\"g i p\")\n",
         "anagram(\"pig\",\"gip\")"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +664,7 @@
         "else:\n",
         "  print(\"not here\")    \n"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,7 +725,7 @@
         "add(listt,444)\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +765,7 @@
         "# pop will delete the last element added to the list\n",
         "print(\"sorted list :  \",l.sort())"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -805,7 +805,7 @@
         "print(l)\n",
         "# [2,5,4,5,3,2,8]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -839,13 +839,62 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7wv8Mf0isjZU"
+        "id": "7wv8Mf0isjZU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "88292474-750e-4636-e707-51c17831d2ea"
       },
       "source": [
-        ""
+        "l=[]\n",
+        "for i in range(int(input(\"enter the no of students      \"))):\n",
+        "  print()\n",
+        "  name=input(\"enter the name of student no     \")\n",
+        "  age=input(\"enter the age       \")\n",
+        "  adress=input(\"enter the  adress      \" )\n",
+        "  college=input(\"enter the college     \")\n",
+        "  print()\n",
+        "  t=name,age,adress,college\n",
+        "  print(t)\n",
+        "  l.append(t)\n",
+        "conc=()\n",
+        "for i in l:\n",
+        "  conc+=i\n",
+        "print()  \n",
+        "print(conc)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter the no of students      3\n",
+            "\n",
+            "enter the name of student no     fdfgd\n",
+            "enter the age       ddfsdf\n",
+            "enter the  adress      gdfg\n",
+            "enter the college     dgdsfg\n",
+            "\n",
+            "('fdfgd', 'ddfsdf', 'gdfg', 'dgdsfg')\n",
+            "\n",
+            "enter the name of student no     sdfasf\n",
+            "enter the age       dfgdsfg\n",
+            "enter the  adress      asfasfd\n",
+            "enter the college     sadfasdfsa\n",
+            "\n",
+            "('sdfasf', 'dfgdsfg', 'asfasfd', 'sadfasdfsa')\n",
+            "\n",
+            "enter the name of student no     sdfsaf\n",
+            "enter the age       asdfasfdsa\n",
+            "enter the  adress      asfasdfasdf\n",
+            "enter the college     dsfgdsfgds\n",
+            "\n",
+            "('sdfsaf', 'asdfasfdsa', 'asfasdfasdf', 'dsfgdsfgds')\n",
+            "('fdfgd', 'ddfsdf', 'gdfg', 'dgdsfg', 'sdfasf', 'dfgdsfg', 'asfasfd', 'sadfasdfsa', 'sdfsaf', 'asdfasfdsa', 'asfasdfasdf', 'dsfgdsfgds')\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -854,19 +903,46 @@
       },
       "source": [
         "b. Write a program to return the top 'n' most frequently occurring chars and their respectivecounts.\n",
-        "e.g. aaaaaabbbbcccc, 2 should return [(a 6) (b 4)]"
+        "e.g. aaaaaabbbbcccc,  should return [(a 6) (b 4)]"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ba8A-0J8tqBJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jOfFNtR8sB3K",
+        "outputId": "68e15679-f4ac-4fdd-c7ab-1e7255087ddc"
       },
       "source": [
-        "\n"
+        "strn=\"aaaaaabbbbcccc\"\n",
+        "temp=strn[0]\n",
+        "count=0\n",
+        "l=[]\n",
+        "for i in range(len(strn)):\n",
+        "  if strn[i]==temp:\n",
+        "    count+=1\n",
+        "    temp=strn[i]\n",
+        "  else:\n",
+        "    l.append((temp,count))\n",
+        "    count=0\n",
+        "    temp=strn[i]\n",
+        "    count+=1\n",
+        "  if (i==len(strn)-1):\n",
+        "    l.append((temp,count))    \n",
+        "print(l)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('a', 6), ('b', 4), ('c', 4)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1411,9 +1487,9 @@
         "id": "07UG7ZIrwDnd"
       },
       "source": [
-        "10. To add 'ing' at the end of a given string (length should be at least 3). If the givenstring already ends with 'ing' then add 'ly' instead. If the string length of the \n",
+        "   10. To add 'ing' at the end of a given string (length should be at least 3). If the givenstring already ends with 'ing' then add 'ly' instead. If the string length of the \n",
         "given string is less than 3, leave it unchanged.\n",
-        "e.g. input : 'abc' output : 'abcing' ; input : 'string' output : 'stringly'"
+        "e.g. input : 'abc' output : 'abcing' ; input : 'string' output : 'stringly'**bold text**"
       ]
     },
     {
