--- a/PythonLab.ipynb
+++ b/PythonLab.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PythonLab.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIv/rgagUEsD47e977UREk",
+      "authorship_tag": "ABX9TyPAP6uTYASqDUEFuQFZFM5j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -985,13 +985,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GmWqu0L0uBZc"
+        "id": "GmWqu0L0uBZc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b5d42d7a-683e-477b-a917-81aa987e3f7d"
       },
       "source": [
-        ""
+        "s1=\"dddddddddeefff\"\n",
+        "s2=\"ddggfffffffff\"\n",
+        "s=set()\n",
+        "for i in s1:\n",
+        "  if (i in s1):\n",
+        "    s.add(i)\n",
+        "print(s)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'f', 'e', 'd'}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1005,13 +1023,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eVjp9FpIuFIS"
+        "id": "eVjp9FpIuFIS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d92cbe38-5b29-4f7a-8646-8d2ffd663d1d"
       },
       "source": [
-        ""
+        "l=[\"aaaaaa\",\"aa\",\"aaaa\",\"aaa\",\"a\"]\n",
+        "\n",
+        "def noOfVowels(x):\n",
+        "  count=0\n",
+        "  for i in x:\n",
+        "    if(i==\"a\" or i==\"e\" or i==\"i\" or i==\"o\" or i==\"u\"  ):\n",
+        "      count+=1\n",
+        "  return count      \n",
+        "\n",
+        "l=sorted(l,key=noOfVowels)\n",
+        "print(l)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['a', 'aa', 'aaa', 'aaaa', 'aaaaaa']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1035,13 +1075,29 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NrJK4NztuPmX"
+        "id": "NrJK4NztuPmX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "93659346-5faf-4eac-df1a-03272c9fd94e"
       },
       "source": [
-        ""
+        "dicc={}\n",
+        "for i in range(1,int(input(\"enter the value of n\"))+1):\n",
+        "  dicc[i]=i*i\n",
+        "print(dicc)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter the value of n5\n",
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1055,13 +1111,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GfHhV0O4uS9L"
+        "id": "GfHhV0O4uS9L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "60bcd0a4-6961-43e0-e951-37ae0c89f59b"
       },
       "source": [
-        ""
+        "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
+        "keyy=int(input(\"enter the value of key\"))\n",
+        "if keyy in dicc.keys():\n",
+        "  print(\"ss\")\n",
+        "else:\n",
+        "  print(\"no\")  \n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter the value of key8\n",
+            "no\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1075,13 +1149,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JlWyxShguWR1"
+        "id": "JlWyxShguWR1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4475581d-3448-4681-f317-3ed0e344b58d"
       },
       "source": [
-        ""
+        "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
+        "keyy=int(input(\"enter the new key\"))\n",
+        "valuee=int(input(\"enter the new value\"))\n",
+        "dicc[keyy]=valuee\n",
+        "print(dicc)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "enter the new key55\n",
+            "enter the new value555\n",
+            "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25, 55: 555}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1095,13 +1187,27 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Hnc9WxYNuZbK"
+        "id": "Hnc9WxYNuZbK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8229f647-cfd1-4e3e-fa9b-d43896c955e1"
       },
       "source": [
-        ""
+        "dicc={1: 1, 2: 4, 3: 9, 4: 16, 5: 25}\n",
+        "l=dicc.keys()\n",
+        "print(l)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "dict_keys([1, 2, 3, 4, 5])\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
